# monorepo-starter

./: .commitlintrc.cjs  .gitignore  .gitleaks.toml  .gitlint.yaml  .hadolint.yaml  .markdownlint.yml  .markdownlintignore  .pre-commit-config.yaml  .prettierignore  .prettierrc.cjs  .yamllint.yml  AGENTS.md  LICENSE  README.md  package.json  pyproject.toml  ruff.toml
.claude/: settings.json
.github/: CODEOWNERS  dependabot.yml
.github/workflows/: lint.yml  test.yml
docs/: testing.md
tests/: __init__.py  conftest.py  test_coverage_config.py  test_gutters.py  test_project_structure.py  test_pytest_config.py
